--- a/public/views/error.ejs
+++ b/public/views/error.ejs
@@ -8,6 +8,6 @@
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
 </head>
 <body>
-    <h>Whoops! Something went wrong there, neighbourinos!</h>
+    <h>Whoops! Something went wrong there, neighbourino!</h>
 </body>
 </html>
