--- a/public/views/partials/footer.ejs
+++ b/public/views/partials/footer.ejs
@@ -1,9 +1,13 @@
 <div class="row">
-    <div class="col-md-5">
+    <div class="col-sm-2">
         Follow Us On<br/>
         <a href="https://twitter.com/CR_Normies"><img src="/media/footer/twitter.png" alt="twitter"></a>
     </div>
-    <div class="col-md-5">
+    <div class="col-sm-8">
         <p>Made by Sir Doge. Pls give doge coins.<p>
+    </div>
+    <div class="col-sm-2">
+        GitHub Repo<br/>
+        <a href="https://github.com/anthonyrojas/ClashSite"><img src="/media/footer/github.png"></a>
     </div>
 </div>
