clan page progress

--- a/public/views/clan.ejs
+++ b/public/views/clan.ejs
@@ -140,7 +140,7 @@
                         <td id="player-list-name"><a href="/player/<%= member.tag %>"><%= member.name %></a></td>
                         <td><%= member.expLevel %></td>
                         <td><%= member.trophies %></td>
-                        <td><%= member.arena.arena %></td>
+                        <td><%= member.arena.name %></td>
                         <td><%= member.clanChestCrowns %></td>
                     </tr>
                     <% }); %>
