--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -64,13 +64,13 @@
                 </div>
                 <div class="col-md-6">
                     <div class="card">
-                        <h3 class="card-header">What We Do</h3>
+                        <h3 class="card-header">About Us</h3>
                         <div class="card-block">
                             <p class="card-text">
                                 We wreck clans... mostly. We have some s*!t players as well, unfortunately. 
                                 We require that every player contribute a little to the clan chest every week.
-                                Our goal is always to try to get a 10/10 every week. 
                                 There are also tournaments hosted from time to time for our loyal clan members. The usurper "Pina" is in exile.
+                                Feel free to join us if you can contribute to our clan chest.
                             </p>
                         </div>
                     </div>
