--- a/public/views/clan.ejs
+++ b/public/views/clan.ejs
@@ -14,7 +14,7 @@
     <!--google fonts-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab">
     <!--custom css-->
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="/styles/style.css">
 </head>
 <body>
     <header>
@@ -56,7 +56,7 @@
                     </div>
                 </div>
                 <div class="card-block">
-                    <p class="card-text"><%= data.tag %></p>
+                    <p class="lead"><%= data.tag %></p>
                 </div>
             </div>
             <br/>
