--- a/public/views/clan.ejs
+++ b/public/views/clan.ejs
@@ -40,7 +40,7 @@
                 </ul>
             </div>
         </nav>
-        <img class="img-fluid" src="/media/header/banner.png" id="banner">
+        <img class="img-fluid" src="/media/header/banner.png" id="banner" alt="banner logo">
     </header>
     <main>
         <div class="container" id="wrapper">
@@ -152,5 +152,4 @@
         <% include ./partials/footer %>
     </footer>
 </body>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </html>
