--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -23,7 +23,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <a class="navbar-brand" href="#">
-                <img src="./media/nav/navbrand.png" width="40" height="40" class="d-inline-block align-top">
+                <img src="./media/nav/navbrand.png" width="40" height="40" class="d-inline-block align-top" alt="navbar brand">
                 The Normies
             </a>
                     
