--- a/public/views/partials/footer.ejs
+++ b/public/views/partials/footer.ejs
@@ -8,6 +8,6 @@
     </div>
     <div class="col-sm-2">
         GitHub Repo<br/>
-        <a href="https://github.com/anthonyrojas/ClashSite"><img src="/media/footer/github.png"></a>
+        <a href="https://github.com/anthonyrojas/ClashSite"><img src="/media/footer/github.png" alt="github"></a>
     </div>
 </div>
