--- a/public/views/player.ejs
+++ b/public/views/player.ejs
@@ -15,8 +15,6 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab">
     <!--custom css-->
     <link rel="stylesheet" href="/styles/style.css">
-    <!--custom scripts-->
-    <!--<script type="text/javascript" src="/scripts/playerScript.js"></script>-->
 </head>
 <body>
     <header>
@@ -25,7 +23,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <a class="navbar-brand" href="#">
-                <img src="/media/nav/navbrand.png" width="40" height="40" class="d-inline-block align-top">
+                <img src="/media/nav/navbrand.png" width="40" height="40" class="d-inline-block align-top" alt="navbar brand">
                 The Normies
             </a>                
             <div class="collapse navbar-collapse" id="myNavbar">
@@ -42,7 +40,7 @@
                 </ul>
             </div>
         </nav>
-        <img class="img-fluid" src="/media/header/banner.png" id="banner">
+        <img class="img-fluid" src="/media/header/banner.png" id="banner" alt="banner logo">
     </header>
     <main>
         <div class="container" id="wrapper">
@@ -264,5 +262,4 @@
         <% include ./partials/footer %>
     </footer>
 </body>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </html>
