--- a/public/views/error.ejs
+++ b/public/views/error.ejs
@@ -41,7 +41,7 @@
                 </ul>
             </div>
         </nav>
-        <img class="img-fluid" src="/media/header/banner.png" id="banner">
+        <img class="img-fluid" src="/media/header/banner.png" id="banner" alt="banner logo">
     </header>    
     <main>
         <div class="container" id="wrapper">
