--- a/public/views/about.ejs
+++ b/public/views/about.ejs
@@ -23,7 +23,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <a class="navbar-brand" href="#">
-                <img src="/media/nav/navbrand.png" width="40" height="40" class="d-inline-block align-top">
+                <img src="/media/nav/navbrand.png" width="40" height="40" class="d-inline-block align-top" alt="navbar brand">
                     The Normies
             </a>                
             <div class="collapse navbar-collapse" id="myNavbar">
@@ -33,6 +33,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/clan">Our Clan</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/search">Search</a>
                     </li>
                     <li class="nav-item active">
                         <a class="nav-link" href="/about">About <span class="sr-only">(current)</span></a>
