--- a/public/views/clan.ejs
+++ b/public/views/clan.ejs
@@ -35,6 +35,9 @@
                         <a class="nav-link" href="/clan">Our Clan<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="/search">Search</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="/about">About</a>
                     </li>
                 </ul>
