--- a/public/views/player.ejs
+++ b/public/views/player.ejs
@@ -35,6 +35,9 @@
                         <a class="nav-link" href="/clan">Our Clan</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="/search">Search</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="/about">About</a>
                     </li>
                 </ul>
