add cache middelware

--- a/public/views/partials/battleHistory.ejs
+++ b/public/views/partials/battleHistory.ejs
@@ -2,45 +2,78 @@
     <%if(battle.mode.players === "TvT"){%>
         <div class="card">
             <div class="card-header">
-                <%=battle.type%>
+                <%=battle.mode.name%>
             </div>
             <div class="row">
-                <div class="col-sm-5">
-                    <a href="/player/<%=battle.team[0].tag%>"><%=battle.team[0].name%></a><br/>
+                <div class="col-sm-4">
+                    <a href="/player/<%=battle.team[0].tag%>"><%=battle.team[0].name%></a>
+                    <br/>
                     <%battle.team[0].deck.forEach(function(card){%>
-                        <img class="battle-history-deck" src="<%=card.icon%>">
+                        <img class="battle-history-deck" src="<%=card.icon%>" alt="team deck cards">
                     <%});%>
                     <br/>
-                    <a href="/player/<%=battle.team[1].tag%>"><%=battle.team[1].name%></a><br/>
+                    <a href="/player/<%=battle.team[1].tag%>"><%=battle.team[1].name%></a>
+                    <br/>
                     <%battle.team[1].deck.forEach(function(card){%>
-                        <img class="battle-history-deck" src="<%=card.icon%>">
+                        <img class="battle-history-deck" src="<%=card.icon%>" alt="team deck cards">
                     <%});%>
                 </div>
-                <div class="col-sm-2">
-                    <%if(battle.mode.name.includes("Challenge")){%>
-                        Challenge m8
-                    <% }%>
-                    <%=battle.mode.name%>
+                <div class="col-sm-4">
+                    <% if(battle.type=="challenge"){ %>
+                        <img src="/media/battles/SpecialChallenge.png" class="battle-history-battleIcon" alt="challenge icon">
+                    <% } else if(battle.type=="tournament"){ %>
+                        <img src="/media/battles/Tournament.png" class="battle-history-battleIcon" alt="tournament icon">
+                    <% } else if(battle.type=="clanMate"){ %>
+                        <img src="/media/battles/ClanFriendly.png" class="battle-history-battleIcon" alt="2v2 clan friendly icon">
+                    <% }else{ %>
+                        <img src="/media/battles/TvTLadder.png" class="battle-history-battleIcon" alt="2v2 ladder battle icon">
+                    <%}%>
                 </div>
-                <div class="col-sm-5">
-                    <%=battle.opponent[0].name%><br/><%=battle.opponent[1].name%>
+                <div class="col-sm-4">
+                    <a href="/player/<%=battle.opponent[0].tag%>"><%=battle.opponent[0].name%></a>
+                    <br/>
+                    <%battle.opponent[0].deck.forEach(function(card){%>
+                        <img class="battle-history-deck" src="<%=card.icon%>" alt="opponent cards">
+                    <%});%>
+                    <br/>
+                    <a href="/player/<%=battle.opponent[1].tag%>"><%=battle.opponent[1].name%></a>
+                    <br/>
+                    <%battle.opponent[1].deck.forEach(function(card){%>
+                        <img class="battle-history-deck" src="<%=card.icon%>" alt="opponent cards">
+                    <%});%>
                 </div>
             </div>
         </div>
     <% }else{ %>
         <div class="card">
             <div class="card-header">
-                <%=battle.type%>
+                <%=battle.mode.name%>
             </div>
             <div class="row">
                 <div class="col-sm-4">
-                    <%=battle.mode.players%>
+                    <p><a href="/player/<%=battle.team[0].tag%>"><%=battle.team[0].name%></a></p>
+                    <br/>
+                    <%battle.team[0].deck.forEach(function(card){%>
+                        <img class="battle-history-deck" src="<%=card.icon%>" alt="team deck cards">
+                    <%});%>
                 </div>
                 <div class="col-sm-4">
-                    <%=battle.team[0].name%>
+                    <% if(battle.type=="challenge"){ %>
+                        <img src="/media/battles/SpecialChallenge.png" class="battle-history-battleIcon" alt="special challenge icon">
+                    <% }else if(battle.type=="tournament"){ %>
+                        <img src="/media/battles/Tournament.png" class="battle-history-battleIcon" alt="tournament icon">
+                    <% }else if(battle.type=="friendly"){ %>
+                        <img src = "/media/battles/Friendly.png" class="battle-history-battleIcon" alt="friendly battle icon">
+                    <% }else{ %>
+                        <img src="/media/battles/Ladder.png" class="battle-history-battleIcon" alt="ladder battle icon">
+                    <%}%>
                 </div>
                 <div class="col-sm-4">
-                    <%=battle.opponent[0].name%>
+                    <p><a href="/player/<%=battle.opponent[0].tag%>"><%=battle.opponent[0].name%></a></p>
+                    <br/>
+                    <%battle.opponent[0].deck.forEach(function(card){%>
+                        <img class="battle-history-deck" src="<%=card.icon%>" type="opponent deck cards">
+                    <%});%>
                 </div>
             </div>
         </div>
