--- a/public/views/partials/footer.ejs
+++ b/public/views/partials/footer.ejs
@@ -4,7 +4,9 @@
         <a href="https://twitter.com/CR_Normies"><img src="/media/footer/twitter.png" alt="twitter"></a>
     </div>
     <div class="col-sm-8">
-        <p>Made by Sir Doge. Pls give doge coins.<p>
+        <strong>Developer</strong>
+        <p>Made by Sir Doge. Pls give doge coins.</p>
+        <p>normies.site.dev01@gmail.com</p>
     </div>
     <div class="col-sm-2">
         <strong>GitHub</strong><br/>
